--- a/topografiya/templates/leader/polevoy/polevoy_works.html
+++ b/topografiya/templates/leader/polevoy/polevoy_works.html
@@ -93,9 +93,7 @@
 
                                                                 {% for work in rejecteds %}
                                                                     {% if work.workerobject.object.id == object.object.id %}
-                                                                        {% if forloop.last %}
-                                                                                {{ forloop.counter }}
-                                                                            {% endif %}
+                                                                            <b  class="count" data-all="{{ work.workerobject.object.id }},"></b>
                                                                     {% endif %}
                                                                 {% endfor %}
 
@@ -209,5 +207,20 @@
             </div>
 
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+$('.count').each(function(i,obj){
+    let text=$(this).attr('data-all');
+    num=text.split(',');
+    let s=0;
+    for(let i in num){
+    if(num[i]!='')
+      s++;
+      }
+        $(this).text(s);
+    });
+  });
 
+</script>
 {% endblock %}
