--- a/topografiya/templates/geodezis/program_work_event.html
+++ b/topografiya/templates/geodezis/program_work_event.html
@@ -175,10 +175,8 @@
                                                    </div>
                                                </div>
                                                <div class="mb-3 row">
-                                                   <label style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">7</span> ПРОИЗВОДСТВО ТОПОГРАФИЧЕСКИХ СЪЕМОК</label>
-                                                   <div class="col-sm-9">
-                                                       <textarea style="height: 100px;" name="a7" class="form-control" type="text" placeholder="производится описание принятого вида обоснования, его точность;">{{ object.a7 }}</textarea>
-                                                   </div>
+                                                   <p style="text-align: center" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">7</span> ПРОИЗВОДСТВО ТОПОГРАФИЧЕСКИХ СЪЕМОК</p>
+
                                                </div>
                                                <div style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-warning">7.1</span> Вид, масштаб и объем съемки.</div>
                                                <div class="col-sm-12">
