--- a/topografiya/templates/leader/program_works/program_work_form_re_sent_to_check.html
+++ b/topografiya/templates/leader/program_works/program_work_form_re_sent_to_check.html
@@ -186,11 +186,9 @@
                                                        <textarea class="form-control" name="a6" type="text" placeholder="производится описание принятого вида обоснования, его точность;">{{ form.a6 }}</textarea>
                                                    </div>
                                                </div>
-                                               <div class="mb-3 row">
-                                                   <label style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">7</span> ПРОИЗВОДСТВО ТОПОГРАФИЧЕСКИХ СЪЕМОК</label>
-                                                   <div class="col-sm-9">
-                                                       <textarea style="height: 100px;" name="a7" class="form-control" type="text" placeholder="производится описание принятого вида обоснования, его точность;">{{ form.a7 }}</textarea>
-                                                   </div>
+                                                <div class="mb-3 row">
+                                                   <p style="text-align: center" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">7</span> ПРОИЗВОДСТВО ТОПОГРАФИЧЕСКИХ СЪЕМОК</p>
+
                                                </div>
                                                <div style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-warning">7.1</span> Вид, масштаб и объем съемки.</div>
                                                <div class="col-sm-12">
@@ -336,12 +334,12 @@
 
                                               <div class="floder_input">
                                                    <div class="row">
-                                                       <div class="col-lg-6 mt-3" style="font-size: 18px">1. <a href="#"><i class="fa fa-file-pdf-o"></i>Копии задания на производство изысканий <sup class="text-danger">*</sup></a></div>
+                                                       <div class="col-lg-6 mt-3" style="font-size: 18px">1. <a href="#"><i class="fa fa-file-pdf-o"></i>Копии задания на производство изысканий </a></div>
                                                        {% if files.file1 %}
                                                        <div class="col-lg-3 mt-3"><input class="form-control" name="file1" id="file1" type="file"></div>
                                                        <div class="col-lg-3 mt-3 text-center"><a href="/{{ files.file1 }}" class="btn btn-success"> <i class="fa fa-check text-white"></i> Файл билан танишиш</a></div>
                                                            {% else %}
-                                                            <div class="col-lg-6 mt-3"><input class="form-control" required name="file1" id="file1" type="file"></div>
+                                                            <div class="col-lg-6 mt-3"><input class="form-control" name="file1" id="file1" type="file"></div>
                                                            {% endif %}
 
 
